# node_server

./: .env  README.md  compose_mqtt_server.yml  compose_node_server.yml  docker-compose.yml  install_mqtt_server.sh  restart_mqtt_server.sh  restart_node_server.sh  uninstall_mqtt_server.sh  uninstall_node_server.sh
.github/workflows/: actix.yml  interface.yaml  mqtt.yml  ros2.yml  sm_cpp.yml  sm_rust.yml  tcp.yaml  websocket.yml
actix/: Cargo.toml  Dockerfile
actix/src/: json.rs  main.rs  mqtt.rs  postgresql.rs  ros2.rs  send_postgresql.rs  tcp.rs  websocket.rs
actix/static/: index.html
deploy/: compose_node_server.yml  install_node_server.sh  restart_node_server.sh  uninstall_node_server.sh
grpc/: Dockerfile  grpc_2.cpp  sensor.proto  supervisord.conf
interface/: Dockerfile  README.md  package-lock.json  package.json
interface/pages/: index.js
interface/pages/api/: hello.js
interface/pages/api/user/: [id].js
interface/server/: index.js  package.json
interface/src/: App.css  App.tsx
interface/src/components/: SensorGraph.tsx  SensorTable.tsx  TopNav.tsx  ViewToggle.tsx
interface/src/types/: SensorData.ts
js_fullstack/tutorial/html/: 01-hello.html  02-hello.html  03-links
json_rpc/: Dockerfile  json_rpc_1.cpp  supervisord.conf
mqtt/: Dockerfile  mqtt_1.py  mqtt_2.py  mqtt_pub.py  mqtt_sub.py  supervisord.conf
mqtt_node/: Dockerfile  mqtt_node_1.py  mqtt_node_2.py  supervisord.conf
ros2_rust/: CMakeLists.txt  CMakelists.txt  Dockerfile  package.xml
ros2_rust/launch/: haha.launch.py
ros2_rust/scripts/: publisher.py  subscriber.py
shared_memory/: CMakeLists.txt  Cargo.toml  Dockerfile  hehe.sh  sm_1.cpp  sm_2.cpp  sm_cpp_1.cpp  sm_cpp_2.cpp  sm_rust_1.rs  sm_rust_2.rs  supervisord.conf
shared_memory/iceoryx/build_package/: CPackSourceConfig.cmake  cmake_install.cmake  compile_commands.json  install_manifest.txt
shared_memory/iceoryx/build_package/_CPack_Packages/Linux/DEB/iceoryx_2.0.3_GNU-9.4.0/: control  md5sums
shared_memory/iceoryx/build_package/_CPack_Packages/Linux/DEB/iceoryx_2.0.3_GNU-9.4.0/usr/include/iceoryx/v2.0.3/: iceoryx_versions.hpp
shared_memory/iceoryx/build_package/_CPack_Packages/Linux/DEB/iceoryx_2.0.3_GNU-9.4.0/usr/lib/cmake/iceoryx_hoofs/: iceoryx_hoofsConfig.cmake  iceoryx_hoofsTargets-release.cmake
shared_memory/iceoryx/build_package/_CPack_Packages/Linux/DEB/iceoryx_2.0.3_GNU-9.4.0/usr/lib/cmake/iceoryx_posh/: iceoryx_poshTargets.cmake
shared_memory/iceoryx/build_package/dependencies/cpptoml/download/: cmake_install.cmake
shared_memory/iceoryx/build_package/dependencies/cpptoml/download/ext_cpptoml-prefix/src/ext_cpptoml-stamp/: ext_cpptoml-gitclone-lastrun.txt
shared_memory/iceoryx/build_package/dependencies/cpptoml/download/ext_cpptoml-prefix/tmp/: ext_cpptoml-gitclone.cmake
shared_memory/iceoryx/build_package/hoofs/: Makefile
shared_memory/iceoryx/build_package/hoofs/platform/: Makefile  cmake_install.cmake
shared_memory/iceoryx/build_package/iceoryx_binding_c/: Makefile  cmake_install.cmake  iceoryx_binding_cConfig.cmake
shared_memory/iceoryx/build_package/posh/: Makefile
sm_cpp/: CMakeLists.txt  Dockerfile  haha.sh  hehe.sh  sm_cpp_1.cpp  sm_cpp_2.cpp  sm_cpp_pub.cpp  sm_cpp_sub.cpp  supervisord.conf
sm_cpp/iceoryx/: iceoryx_2.0.3_GNU-9.4.0.deb
sm_cpp/iceoryx/build_package/: CMakeCache.txt  CPackConfig.cmake  Makefile
sm_cpp/iceoryx/build_package/dependencies/cpptoml/download/: CMakeCache.txt  CMakeLists.txt  Makefile
sm_cpp/iceoryx/build_package/dependencies/cpptoml/download/ext_cpptoml-prefix/tmp/: ext_cpptoml-gitupdate.cmake
sm_cpp/iceoryx/build_package/dependencies/posh/cpptoml/prebuild/: Makefile  cmake_install.cmake
sm_cpp/iceoryx/build_package/hoofs/: cmake_install.cmake
sm_cpp/iceoryx/build_package/posh/: cmake_install.cmake
sm_rust/: Cargo.toml  Dockerfile  haha.sh  hehe.sh  roudi_config.toml  sm_rust_1.rs  sm_rust_2.rs  sm_rust_pub.rs  sm_rust_sub.rs
tcp/: Dockerfile  supervisord.conf  tcp_1.cpp  tcp_2.cpp  tcp_client.cpp  tcp_server.cpp
websocket/: Dockerfile  supervisord.conf  websocket.py  websocket_1.py  websocket_2.py
(+3 files in other folders)
