[package]
name = "actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
rumqttc = "0.24.0"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
actix-web-actors = "4"
actix = "0.13"  
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"] }
dotenv = "0.15"
actix-cors = "0.7"