[package]
name = "rust_pub_sub"
version = "0.1.0"
edition = "2024"

[dependencies]
iceoryx2 = "0.5.0" 
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "sm_rust_1"
path = "sm_rust_1.rs"

[[bin]]
name = "sm_rust_2"
path = "sm_rust_2.rs"